deployments/null-cloud/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eddington-api
  namespace: web
spec:
  selector:
    matchLabels:
      app: eddington-api
  template:
    metadata:
      labels:
        app: eddington-api
    spec:
      containers: 
      - name: eddington-api
        image: nullchannel/eddington-api:e75d7be8fa58c3a5d01d094550dd28b3ae6515e2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
