deployments/null-cloud/base/api/test-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: eddington-api-test-vitrual-service 
spec:
  hosts:
  - "*"
  gateways:
  - nullcloud-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1
    route:
    - destination:
        host: eddington-api
        port:
          number: 80
