deployments/null-cloud/base/api/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eddington-api-vitrual-service 
spec:
  hosts:
  - "*"
  gateways:
  - nullcloud-gateway
  http:
  - match:
    - uri:
        prefix: /api
  - route:
    - destination:
        host: eddington-api
        port:
          number: 80
